<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dubbing"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dubbing" />

    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_more" />


    <item
        android:id="@+id/navigation_audition"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_audition" />


    <item
        android:id="@+id/navigation_compare"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_compare" />

</menu>
